# trilium-translation

./: .gitignore  1.init.py  2.trans.py  2.trilium_trans.py  3.make_release.py  Dockerfile  Dockerfile_github_action  README.md  README_CN.md  docker-compose.yml  init.py  make_release.py  pyproject.toml  settings.py  translations.py  translations_cn.py  trilium_trans.py
.github/: FUNDING.yml
.github/workflows/: docker-save-tag.yaml  docker.yaml
demo-cn/: !!!meta.json  index.html  navigation.html
demo-cn/示例笔记/: Trilium 扩展.html  知识库.html  笔记.html
demo-cn/示例笔记 - 请不要删除/: Trilium 使用技巧.html  Trilium 扩展.html  知识库.html  笔记.html
demo-cn/示例笔记 - 请不要删除/Trilium 使用技巧/: 1_遇到bug或者问题怎么办.html  Awesome-trilium 插件索引.html  Awesome-trilium.html  TODO 列表.html  Trilium接口调用.html  使用模板创建笔记.html  保存笔记.html  保存笔记和历史版本.html  克隆笔记.html  创建笔记.html  剪藏网页.html  引用文字, 段落和代码块.html  快速定位常用笔记.html  思维导图.html  插入图片.html  搜索.html  数据库.html  标签.html  标题.html  目录功能.html  笔记图标.html  笔记链接, 双链笔记.html  编辑文字.html  设置.html  遇到bug或者问题怎么办.html
demo-cn/示例笔记 - 请不要删除/Trilium 扩展/: Trilium 主题 theme.html  Trilium 分享笔记.html  Trilium 组件 widget.html  Trilium 脚本 script.html  Trilium 自定义API.html  关系图.json  画布笔记.json
demo-cn/示例笔记 - 请不要删除/知识库/: URL收藏夹.html  买买买.html  健康.html  吃的.html  有意思的话.html  游戏.html  电影.html  花.html  茶叶.html
demo-cn/示例笔记 - 请不要删除/笔记/: 临时目录.html  关注项目.html  日记.html  读书.html
demo-cn/示例笔记/Trilium 扩展/: Trilium 主题 theme.html  Trilium 使用技巧.clone.html  Trilium 使用技巧.html  Trilium 按钮 button.html  Trilium 组件 widget.html  Trilium 自定义API.html  关系图.json
demo-cn/示例笔记/知识库/: IoT.html  URL收藏夹.html  买买买.html  (+11 more)
(+250 files in other folders)
